Fixed Logo Overflowing

--- a/styles.css
+++ b/styles.css
@@ -187,21 +187,10 @@ a:active{
   width: auto;
 }
 
-#ragam-logo {
-  height: 30vh; 
-  margin-top: -50px; 
-  margin-bottom: -50px;
-}
 @media only screen and (max-width: 600px) {
   .main {
     max-width: 100%;
     margin: 0px 20px;
-  }
-
-  #ragam-logo {
-    height: auto;
-    max-width:100%;
-    width:100%;
   }
 
 *{
